--- a/front-end/src/index.html
+++ b/front-end/src/index.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>App</title>
   </head>
-  <body></body>
+  <body>
+    <div id="app-root"></div>
+  </body>
 </html>
